@@ -1,5 +1,12 @@
 TASpring change log
 
+0.next
+
+* [bugfix] 'Quit and Resign' dialog now also appears when you're hosting, and stays hidden when the game is over.
+* [change] 'Quit and Resign' dialog now only gives everything to allies (and not enemies) if they are still alive.
+* [change] Radar and jammer range is shown by default if you press 'L'.
+* [change] Radar and jammer toggle ';' happens instantly.
+
 0.72b1
 
 - Bos/Cob script for units can now animate the death of the unit. Just have the Kill function return after a while instead of directly and return wreck level in return value instead of in function argument.
